# t-spline

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  license_header.txt
.github/workflows/: rust.yml
docs/: notes.md  simple.txt  t-spline-paper.md  t-spline.md
examples/: simple.rs  t_junction.rs  unit_square.rs
preview/: Cargo.toml
preview/src/: main.rs
src/: commands.rs  export.rs  lib.rs  models.rs  operation.rs  shapes.rs  tesselation.rs  tmesh.rs
src/commands/: split_face.rs  tessellate.rs
src/models/: control_point.rs  direction.rs  face.rs  half_edge.rs  ids.rs  segment.rs  tmesh.rs  tspline.rs
src/tmesh/: bounds.rs  control_point.rs  face.rs  half_edge.rs  ids.rs
t_spline/: Cargo.toml
t_spline/src/: algorithms.rs  bounds.rs  commands.rs  control_mesh.rs  lib.rs  line.rs  math.rs  numeric.rs  shapes.rs  tmesh.rs  uv_mesh.rs
t_spline/src/tmesh/: bounds.rs  control_point.rs  direction.rs  face.rs  half_edge.rs  ids.rs  segment.rs
t_spline/src/uv_mesh/: direction.rs  half_edge.rs  ids.rs  line.rs  uv_point.rs
t_spline_commands/: Cargo.toml
t_spline_commands/examples/: fixed.rs  simple.rs  t_junction.rs
t_spline_commands/src/: align_control_points_to_cage.rs  extrude.rs  extrude_edge.rs  lib.rs  split_face.rs  tessellate.rs  unit_square.rs
t_spline_io/: Cargo.toml
t_spline_io/src/: lib.rs  obj_writer.rs
