[package]
name = "t-spline"
version = "0.1.0"
edition = "2024"

[features]
fixed = [ "dep:fixed" ]

[dependencies]
nalgebra = { version = "0.34.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
fixed = { version = "1.30.0", optional = true, features = ["num-traits"] }

[dev-dependencies]
fixed = { version = "1.30.0", features = ["num-traits"]}