[package]
name = "t-spline-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
thiserror = "2.0.18"
t-spline = { path = "../t_spline" }
num-traits = "0.2.19"

[dev-dependencies]
t-spline-io = { path = "../t_spline_io" }
t-spline = { path = "../t_spline", features = ["fixed"] }
fixed = { version = "1.30.0", features = ["num-traits"]}